[package]
name = "cookie"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde_json = "1.0.138"
tokio = "1.43.0"
tungstenite = "0.26.1"
url = "2.5.4"
winapi = { version = "0.3.9", features = ["dpapi", "winerror"] }
